--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <h1>Attendance75</h1>
       <div class="form">
         <input
-          type="number"
+          type="text"
           id="total_lectures"
           placeholder="Total Lectures"
           required
         />
         <input
-          type="number"
+          type="text"
           id="attended_lectures"
           placeholder="Attended Lectures"
           required
         />
         <button id="calculate_btn">Calculate Attendance</button>
-        <div class="result">
+        <div class="result" id="result">
           <h2 id="attendance">Attendance : 78%</h2>
           <h2 id="needed_lectures">Lectures need to attend: 4</h2>
         </div>
@@ -44,5 +44,6 @@
       Developed by
       <a href="http://" target="_blank" rel="noopener noreferrer">Sahil</a>
     </footer>
+    <script src="app.js"></script>
   </body>
 </html>
