--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </p>
         <p class="text">
           Find the code
-          <a href="http://" target="_blank" rel="noopener noreferrer">here.</a>
+          <a href="https://github.com/Sxhil296/attendance75" target="_blank" rel="noopener noreferrer">here.</a>
         </p>
       </div>
     </main>
     <footer class="footer">
       Developed by
-      <a href="http://" target="_blank" rel="noopener noreferrer">Sahil</a>
+      <a href="https://github.com/Sxhil296" target="_blank" rel="noopener noreferrer">Sahil</a>
     </footer>
     <script src="app.js"></script>
   </body>
