--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       <div class="description">
         <p class="text">This is a fun app made during boring lecture.</p>
         <p class="text">
-          This app calculate your attendance and also tells you how many more
-          lectures you need to attend to complete 75% attendance.
+         This app calculates your attendance and also tells you how many more lectures you need to attend to achieve 75% attendance.
         </p>
         <p class="text">
           Find the code
